<resources>
    <string name="app_name">PlanIt. Share&amp;do</string>
    <string name="button_sign">Sign in</string>
    <string name="welcome_message">Welcome to the Planner!</string>
    <string name="username">Username:</string>
    <string name="password">Password</string>
    <string name="button_sign_up">Sign up now</string>
    <string name="email">E-mail:</string>
    <string name="reg_form">Registration form:</string>
    <string name="back">Back</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="no_tasks">You still don\'t have any tasks. Want to create a new one ?</string>
    <string name="soonest_task">Your soonest task is:</string>
    <string name="task_name">Name:</string>
    <string name="start_time">Starts at:</string>
    <string name="end_time">Ends at:</string>
    <string name="task_desc">Description:</string>
    <string name="new_task">Create new task</string>
    <string name="creating_task">Enter parameters for new task</string>
    <string name="all_tasks">To all my tasks</string>
    <string name="your_tasks">Your tasks:</string>
    <string name="log_out">Log out</string>
    <string name="title_log_out">Logging out</string>
    <string name="exit_confirmation">Do you really want to exit?\nAfter that you\'ll be have to login again.</string>
    <string name="new_parameters">Enter new parameters:</string>
    <string name="confirm">Confirm</string>
    <string name="delete_task">Delete task</string>
    <string name="delete_confirmation">Are you sure?\nThat action can\'t be undone.</string>
    <string name="name_already_exists">Task with this name already exists!</string>
    <string name="successfully_edited">Successfully edited!</string>
    <string name="successfully_added">"Successfully added!"</string>
    <string name="went_wrong">Whoops, something went wrong…</string>
    <string name="to_profile">To my profile</string>
    <string name="your_data">Your profile:</string>
    <string name="id">Id:</string>
    <string name="reg_date">Registration date:</string>
    <string name="edit_profile">Edit profile</string>
    <string name="incorrect_UoP">Incorrect username or password</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="password_rnt_match">Passwords aren\'t match</string>
    <string name="already_registered">Error: that username or e-mail already registered!</string>
    <string name="success_reg">Successfully registered!</string>
    <string name="status">Status:</string>
    <string-array name="taskStatuses">
        <item>-</item>
        <item>To do</item>
        <item>In progress</item>
        <item>Completed</item>
        <item>Pending</item>
    </string-array>
    <string name="a_z_1_9_username">Can be only English, 0–9 symbols and longer than 4 symbols</string>
    <string name="a_z_1_9_password">Can be only English, 0–9 symbols and longer than 8 symbols</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="out_time">That date is outdated. Are you sure you want to continue?</string>
    <string name="friend_list">Friends</string>
    <string name="add_friend">Send request</string>
    <string name="to_add_new_friend_page">Add friend</string>
    <string name="friend_id">Friend id:</string>
    <string name="friend_not_found">Friend with this id not found</string>
    <string name="not_correct_friend_id">Not correct id, has to be a number</string>
    <string name="success">Success</string>
    <string name="friend_already_exists">Friend already in your friend list or\nyou already sent a request</string>
    <string name="confirmed_friends">Confirmed</string>
    <string name="pending_to_user">Requests to you</string>
    <string name="pending_from_user">Requests from you</string>
    <string name="sure_add_friend">Are you sure you want to add this user?</string>
    <string name="sure_delete_friend">Are you sure you want to delete this friend?</string>
    <string name="friend_data">Your friend profile:</string>
    <string name="delete_friend">Delete friend</string>
    <string name="friends_tasks">Friend\'s tasks</string>
    <string name="ask_for_add">ask for new</string>
    <string name="also_for_me">Also add to my tasks</string>
    <string name="incorrect_time">Incorrect time (may be outdated)</string>
    <string name="created_by">Created by:</string>
    <string name="shared_to">You are sharing with:</string>
</resources>